--- a/data/build.gradle
+++ b/data/build.gradle
@@ -2,15 +2,11 @@ apply plugin: 'java-library'
 apply plugin: 'org.jetbrains.kotlin.jvm'
 apply plugin: 'kotlin-kapt'
 
-dependencies {
-    implementation project(':domain')
-}
-
 sourceCompatibility = "7"
 targetCompatibility = "7"
 
 dependencies {
-    implementation project(':domain')
+    implementation project(':usecases')
 
     // Retrofit
     implementation RetrofitDeps.retrofit
