--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation AndroidXDeps.constraintLayout
     implementation AndroidXDeps.appCompat
     testImplementation TestDeps.junit
+    testImplementation AndroidTestDeps.roboElectric
     androidTestImplementation AndroidTestDeps.espresso
 
     // Toothpick and KTP
@@ -51,6 +52,12 @@ dependencies {
 }
 
 android {
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
+    }
+
     packagingOptions {
         exclude 'META-INF/DEPENDENCIES'
         exclude 'META-INF/LICENSE'
