--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.kotlin_version = Versions.kotlin
+    ext.hilt_version = Versions.hilt
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.3"
+        classpath 'com.android.tools.build:gradle:4.2.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -37,6 +38,9 @@ subprojects {
                 compileOptions {
                     sourceCompatibility Config.javaVersion
                     targetCompatibility Config.javaVersion
+                }
+                kotlinOptions {
+                    jvmTarget = JavaVersion.VERSION_1_8
                 }
             }
         }
