--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,6 @@ buildSrc/build
 .cxx
 local.properties
 gradlew
-.idea/misc.xml
-.idea/gradle.xml
-.idea/compiler.xml
+/.idea/misc.xml
+/.idea/gradle.xml
+/.idea/compiler.xml
