First Compose implementation
- Using single activity (MainActivity) and composable screens only
- Implemented Navigation
- Changed theme and UI/design to a minimalist approach without bar
- Transparent system bars and drawing under them

Missing:

- Refactor UI architecture to better fit Compose paradigm
- States on MainActivity are not ok. No connection state is blank
- Improve UI with animations on scrolling and transition
to detail screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,13 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".view.detail.DetailActivity"
+            android:name=".view.MainActivity"
             android:screenOrientation="portrait"
-            android:exported="false"/>
-        <activity
-            android:name=".view.list.WallpaperListActivity"
-            android:screenOrientation="portrait"
-            android:exported="false">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
